--- a/examples/tables.org
+++ b/examples/tables.org
@@ -165,13 +165,16 @@ and ~:bottomleft~ keywords in ~#+ATTR_CONTEXT~.
 |--------+---+---|
 
 #+CAPTION: Table with column groups
-| N | N^2 | N^3 | N^4 | sqrt(n) | sqrt[4](N) |
-|---+-----+-----+-----+---------+------------|
-| / |   < |     |   > |       < |          > |
-| 1 |   1 |   1 |   1 |       1 |          1 |
-| 2 |   4 |   8 |  16 |  1.4142 |     1.1892 |
-| 3 |   9 |  27 |  81 |  1.7321 |     1.3161 |
-|---+-----+-----+-----+---------+------------|
+| N   | N^2 |     N^3 | N^4 | sqrt(n) | sqrt[4](N) |
+| foo | bar | baz biz |     |         |            |
+|-----+-----+---------+-----+---------+------------|
+| /   | <   |         |   > |       < |          > |
+| 1   | 1   |       1 |   1 |       1 |          1 |
+| 2   | 4   |       8 |  16 |  1.4142 |     1.1892 |
+| 3   | 9   |      27 |  81 |  1.7321 |     1.3161 |
+|-----+-----+---------+-----+---------+------------|
+| ab  | de  |      ag |  ce |      fe |         dd |
+|     |     |         |     |         |            |
 
 #+CAPTION: Table with row groups
 #+ATTR_CONTEXT: :f
